# master-project

./: Readme.md
ros2_ws/src/camera_control_pkg/: CMakeLists.txt  package.xml
ros2_ws/src/camera_control_pkg/gazebo_world/: gazebo_worlds.world
ros2_ws/src/camera_control_pkg/gazebo_world/install/: local_setup.sh  setup.sh
ros2_ws/src/camera_control_pkg/gazebo_world/log/: latest_build
ros2_ws/src/camera_control_pkg/joy_plugin/: CMakeLists.txt  joy_control.cc
ros2_ws/src/camera_control_pkg/kinect_ros/: model.sdf
ros2_ws/src/camera_control_pkg/launch/: virtual_environment.launch.py  virtual_environment_gnome_terminal.launch.py
ros2_ws/src/camera_control_pkg/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/camera_control_pkg/launch/log/: latest_build
ros2_ws/src/camera_control_pkg/src/: depth_processor.cpp
ros2_ws/src/install/: local_setup.sh  setup.sh
ros2_ws/src/install/camera_control_pkg/share/ament_index/resource_index/package_run_dependencies/: camera_control_pkg
ros2_ws/src/install/camera_control_pkg/share/camera_control_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/src/keyboard_pkg/: package.xml  setup.py
ros2_ws/src/keyboard_pkg/keyboard_pkg/: key_node.py
